// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-info-popup Renders \`add-info-popup\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <span>
      Add an info popup
    </span>
     
    <info-popup-form-stub
      columns=""
      form="[object Object]"
    />
     
    <button
      class="v-btn v-btn--flat theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Cancel
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="submit"
    >
      <div
        class="v-btn__content"
      >
        Submit
      </div>
    </button>
  </div>
</form>
`;

exports[`add-info-popup Renders \`add-info-popup\` with popup 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <span>
      Add an info popup
    </span>
     
    <info-popup-form-stub
      columns="[object Object]"
      form="[object Object]"
    />
     
    <button
      class="v-btn v-btn--flat theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Cancel
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="submit"
    >
      <div
        class="v-btn__content"
      >
        Submit
      </div>
    </button>
  </div>
</form>
`;
